Integration Keycloak Angular implemented

--- a/src/app/product/product.component.html
+++ b/src/app/product/product.component.html
@@ -1,1 +1,2 @@
-<p>product works!</p>
+<p style="background-color: chartreuse">product works!</p>
+<a routerLink="/home" style="background-color:darkolivegreen"> home</a>
